--- a/index.html
+++ b/index.html
@@ -6,206 +6,124 @@
 <title>Shahin Tech BD</title>
 
 <style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#f5f5f5;
-}
-
-/* Header */
-.header{
-  background:#0f2a56;
-  color:white;
-  padding:15px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.header h2{
-  margin:0;
-  font-size:20px;
-}
-
-.cart-count{
-  background:#ff6a00;
-  padding:4px 8px;
-  border-radius:50%;
-}
-
-/* Banner */
-.banner{
-  background:linear-gradient(90deg,#ff6a00,#ff3d00);
-  color:white;
-  text-align:center;
-  padding:12px;
-  font-weight:bold;
-}
-
-/* Product */
-.container{
-  padding:15px;
-}
-
-.product{
-  background:white;
-  border-radius:12px;
-  padding:15px;
-  box-shadow:0 5px 15px rgba(0,0,0,0.1);
-  position:relative;
-}
-
-.discount{
-  position:absolute;
-  top:10px;
-  left:10px;
-  background:#ff3d00;
-  color:white;
-  padding:5px 8px;
-  font-size:12px;
-  border-radius:6px;
-}
-
-.product img{
-  width:100%;
-  border-radius:10px;
-}
-
-.price{
-  margin-top:10px;
-}
-
-.new{
-  color:#ff3d00;
-  font-size:20px;
-  font-weight:bold;
-}
-
-.old{
-  text-decoration:line-through;
-  color:gray;
-  margin-left:8px;
-}
-
-.badge{
-  background:#eee;
-  padding:4px 6px;
-  font-size:11px;
-  border-radius:6px;
-  margin-right:5px;
-}
-
-button{
-  width:100%;
-  padding:10px;
-  border:none;
-  border-radius:8px;
-  margin-top:8px;
-  font-size:14px;
-}
-
-.cart-btn{
-  background:#0f2a56;
-  color:white;
-}
-
-.buy-btn{
-  background:#ff6a00;
-  color:white;
-}
-
-/* Order Form */
-.order-box{
-  background:white;
-  padding:15px;
-  margin-top:20px;
-  border-radius:12px;
-}
-
-.order-box input, .order-box select{
-  width:100%;
-  padding:8px;
-  margin-top:8px;
-  border-radius:6px;
-  border:1px solid #ccc;
-}
-
-/* Sticky Bar */
-.sticky{
-  position:fixed;
-  bottom:0;
-  width:100%;
-  background:white;
-  padding:10px;
-  display:flex;
-  justify-content:space-between;
-  box-shadow:0 -3px 10px rgba(0,0,0,0.1);
-}
-
-.place-btn{
-  background:#ff6a00;
-  color:white;
-  padding:8px 20px;
-  border:none;
-  border-radius:8px;
-}
+body{margin:0;font-family:Arial;background:#f5f5f5;}
+.header{background:#0f2a56;color:white;padding:15px;
+display:flex;justify-content:space-between;}
+.container{padding:10px;}
+.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;}
+.product{background:white;border-radius:10px;padding:10px;
+box-shadow:0 3px 10px rgba(0,0,0,0.1);}
+.product img{width:100%;border-radius:8px;}
+.price{color:#ff6a00;font-weight:bold;}
+button{width:100%;padding:8px;margin-top:5px;
+border:none;border-radius:6px;font-weight:bold;}
+.cartbtn{background:#0f2a56;color:white;}
+.buybtn{background:#ff6a00;color:white;}
+.formbox{background:white;padding:15px;border-radius:10px;margin-top:20px;}
+input{width:100%;padding:8px;margin-bottom:8px;}
 </style>
 </head>
 
 <body>
 
 <div class="header">
-  <h2>Shahin Tech BD</h2>
-  <div>Cart <span class="cart-count">1</span></div>
-</div>
-
-<div class="banner">
-🔥 Flash Sale! Up to 50% OFF – Limited Time!
+<span>Shahin Tech BD</span>
+<span>Cart: <span id="cartCount">0</span></span>
 </div>
 
 <div class="container">
 
-  <div class="product">
-    <div class="discount">-20%</div>
-    <img src="https://picsum.photos/400">
-    <h3>Wireless Mouse</h3>
+<div class="grid" id="productGrid"></div>
 
-    <div class="price">
-      <span class="new">৳800</span>
-      <span class="old">৳1000</span>
-    </div>
-
-    <div>
-      <span class="badge">Cash on Delivery</span>
-      <span class="badge">Free Delivery</span>
-    </div>
-
-    <button class="cart-btn">Add to Cart</button>
-    <button class="buy-btn">Buy Now</button>
-  </div>
-
-  <div class="order-box">
-    <h3>Order Now</h3>
-    <p>Subtotal: ৳800</p>
-
-    <select>
-      <option>ঢাকার ভিতরে (৳50)</option>
-      <option>ঢাকার বাইরে (৳100)</option>
-    </select>
-
-    <input type="text" placeholder="Your Name">
-    <input type="text" placeholder="Phone Number">
-    <input type="text" placeholder="Full Address">
-
-    <button class="buy-btn">Confirm Order</button>
-  </div>
+<div class="formbox">
+<h3>Order Now</h3>
+<input id="customerName" placeholder="Your Name">
+<input id="phone" placeholder="Phone Number">
+<input id="address" placeholder="Address">
+<button onclick="submitOrder()" class="buybtn">Place Order</button>
+</div>
 
 </div>
 
-<div class="sticky">
-  <div>Total: ৳850</div>
-  <button class="place-btn">Place Order</button>
-</div>
+<script>
+
+let products = [];
+let cart = [];
+
+const SHEET_URL = "YOUR_PRODUCT_SHEET_JSON_URL";
+const ORDER_URL = "YOUR_WEB_APP_URL_HERE";
+
+fetch(SHEET_URL)
+.then(res=>res.json())
+.then(data=>{
+    products = data;
+    showProducts();
+});
+
+function showProducts(){
+    let html="";
+    products.forEach((p,i)=>{
+        html+=`
+        <div class="product">
+            <img src="${p.image}">
+            <h4>${p.name}</h4>
+            <div class="price">৳${p.price}</div>
+            <button class="cartbtn" onclick="addToCart(${i})">Add to Cart</button>
+        </div>`;
+    });
+    document.getElementById("productGrid").innerHTML=html;
+}
+
+function addToCart(index){
+    let product = products[index];
+    let existing = cart.find(item=>item.name===product.name);
+
+    if(existing){
+        existing.qty +=1;
+    } else{
+        cart.push({
+            name: product.name,
+            price: product.price,
+            qty:1
+        });
+    }
+
+    document.getElementById("cartCount").innerText = cart.length;
+}
+
+function submitOrder(){
+
+    const name = document.getElementById("customerName").value;
+    const phone = document.getElementById("phone").value;
+    const address = document.getElementById("address").value;
+
+    if(!name || !phone || !address){
+        alert("Fill all fields");
+        return;
+    }
+
+    const orderData = {
+        customerName:name,
+        phone:phone,
+        address:address,
+        paymentMethod:"Cash On Delivery",
+        productList:cart
+    };
+
+    fetch(ORDER_URL,{
+        method:"POST",
+        body:JSON.stringify(orderData)
+    })
+    .then(res=>res.text())
+    .then(data=>{
+        alert("Order Placed!");
+        cart=[];
+        document.getElementById("cartCount").innerText=0;
+    });
+
+}
+
+</script>
 
 </body>
 </html>
