--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Shahin Tech BD</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#f5f5f5;}
+body{margin:0;font-family:Arial;background:#f2f2f2;}
 .header{background:#0f2a56;color:white;padding:15px;
 display:flex;justify-content:space-between;}
 .container{padding:10px;}
@@ -50,8 +50,8 @@ input{width:100%;padding:8px;margin-bottom:8px;}
 let products = [];
 let cart = [];
 
-const SHEET_URL = "YOUR_PRODUCT_SHEET_JSON_URL";
-const ORDER_URL = "YOUR_WEB_APP_URL_HERE";
+const SHEET_URL = "https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
+const ORDER_URL = "YOUR_WEB_APP_URL_HERE"; // এখানে তোমার Apps Script URL বসানো আছে আগের মতোই
 
 fetch(SHEET_URL)
 .then(res=>res.json())
@@ -102,6 +102,11 @@ function submitOrder(){
         return;
     }
 
+    if(cart.length==0){
+        alert("Cart is empty");
+        return;
+    }
+
     const orderData = {
         customerName:name,
         phone:phone,
@@ -116,7 +121,7 @@ function submitOrder(){
     })
     .then(res=>res.text())
     .then(data=>{
-        alert("Order Placed!");
+        alert("Order Placed Successfully!");
         cart=[];
         document.getElementById("cartCount").innerText=0;
     });
