--- a/product.html
+++ b/product.html
@@ -7,20 +7,19 @@
 
 <style>
 body{margin:0;font-family:Arial;background:#f5f5f5;}
-.header{background:#0f2a56;color:white;padding:15px;}
+.header{background:#0f2a56;color:white;padding:15px;font-size:18px;}
 .container{padding:15px;}
 .card{background:white;padding:15px;border-radius:10px;
-box-shadow:0 4px 12px rgba(0,0,0,0.1);}
+box-shadow:0 4px 12px rgba(0,0,0,0.1);margin-bottom:15px;}
 img{width:100%;border-radius:10px;}
 .old{color:gray;text-decoration:line-through;}
 .new{color:#ff6a00;font-size:22px;font-weight:bold;}
 .badge{background:red;color:white;padding:4px 8px;
-border-radius:6px;font-size:12px;}
-button{width:100%;padding:10px;margin-top:10px;
-border:none;border-radius:8px;font-weight:bold;}
+border-radius:6px;font-size:12px;display:inline-block;margin-top:5px;}
+button{width:100%;padding:12px;margin-top:10px;
+border:none;border-radius:8px;font-weight:bold;font-size:16px;}
 .buy{background:#ff6a00;color:white;}
-.cart{background:#0f2a56;color:white;}
-input{width:100%;padding:8px;margin-top:8px;}
+input{width:100%;padding:10px;margin-top:8px;border-radius:6px;border:1px solid #ccc;}
 .hidden{display:none;}
 </style>
 </head>
@@ -44,7 +43,7 @@ input{width:100%;padding:8px;margin-top:8px;}
 <script>
 
 const SHEET_URL = "https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
-const ORDER_URL = "YOUR_WEB_APP_URL_HERE";
+const ORDER_URL = "https://script.google.com/macros/s/AKfycbwmSjQZKHkql6DmE9pNxO4VmqwnCeDSqrru29ENN-RLUFpAUVjhapHgQei63mt7Gz6H/exec";
 
 let product;
 
@@ -54,7 +53,7 @@ const id = params.get("id");
 fetch(SHEET_URL)
 .then(res=>res.json())
 .then(data=>{
-    product = data[id];
+    product = data.find(p => p.id == id);
     showProduct();
 });
 
@@ -86,21 +85,24 @@ function submitOrder(){
     }
 
     const orderData = {
-        customerName:name,
-        phone:phone,
-        address:address,
-        product:product.name,
-        price:product.price,
-        payment:"Cash On Delivery"
+        customername: name,
+        phone: phone,
+        address: address,
+        paymentmethod: "Cash On Delivery",
+        productlist: product.name + " - ৳" + product.price
     };
 
     fetch(ORDER_URL,{
         method:"POST",
-        body:JSON.stringify(orderData)
+        body: JSON.stringify(orderData)
     })
     .then(res=>res.text())
     .then(data=>{
         alert("Order Successful!");
+        document.getElementById("orderBox").classList.add("hidden");
+    })
+    .catch(err=>{
+        alert("Order Failed");
     });
 }
 
