--- a/index.html
+++ b/index.html
@@ -6,127 +6,56 @@
 <title>Shahin Tech BD</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#f2f2f2;}
+body{margin:0;font-family:Arial;background:#f5f5f5;}
 .header{background:#0f2a56;color:white;padding:15px;
 display:flex;justify-content:space-between;}
-.container{padding:10px;}
-.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;}
-.product{background:white;border-radius:10px;padding:10px;
-box-shadow:0 3px 10px rgba(0,0,0,0.1);}
-.product img{width:100%;border-radius:8px;}
-.price{color:#ff6a00;font-weight:bold;}
-button{width:100%;padding:8px;margin-top:5px;
-border:none;border-radius:6px;font-weight:bold;}
-.cartbtn{background:#0f2a56;color:white;}
-.buybtn{background:#ff6a00;color:white;}
-.formbox{background:white;padding:15px;border-radius:10px;margin-top:20px;}
-input{width:100%;padding:8px;margin-bottom:8px;}
+.container{padding:10px;display:grid;
+grid-template-columns:repeat(2,1fr);gap:10px;}
+.card{background:white;border-radius:10px;
+box-shadow:0 4px 12px rgba(0,0,0,0.1);padding:10px;}
+img{width:100%;border-radius:8px;}
+.price{color:#ff6a00;font-weight:bold;font-size:18px;}
+.old{color:gray;text-decoration:line-through;font-size:13px;}
+.badge{background:red;color:white;
+padding:2px 6px;border-radius:5px;font-size:11px;}
+button{width:100%;padding:8px;margin-top:8px;
+border:none;border-radius:6px;
+background:#ff6a00;color:white;font-weight:bold;}
 </style>
 </head>
 
 <body>
 
 <div class="header">
-<span>Shahin Tech BD</span>
-<span>Cart: <span id="cartCount">0</span></span>
+<div>Shahin Tech BD</div>
+<div>Cart: 0</div>
 </div>
 
-<div class="container">
-
-<div class="grid" id="productGrid"></div>
-
-<div class="formbox">
-<h3>Order Now</h3>
-<input id="customerName" placeholder="Your Name">
-<input id="phone" placeholder="Phone Number">
-<input id="address" placeholder="Address">
-<button onclick="submitOrder()" class="buybtn">Place Order</button>
-</div>
-
-</div>
+<div class="container" id="productList"></div>
 
 <script>
 
-let products = [];
-let cart = [];
-
 const SHEET_URL = "https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
-const ORDER_URL = "YOUR_WEB_APP_URL_HERE"; // এখানে তোমার Apps Script URL বসানো আছে আগের মতোই
 
 fetch(SHEET_URL)
 .then(res=>res.json())
 .then(data=>{
-    products = data;
-    showProducts();
+    const container = document.getElementById("productList");
+    data.forEach(product=>{
+        container.innerHTML += `
+        <div class="card">
+            <img src="${product.image}">
+            <h4>${product.name}</h4>
+            <div class="old">৳${product.oldprice}</div>
+            <div class="price">৳${product.price}</div>
+            <div class="badge">${product.discount}% OFF</div>
+            <a href="product.html?id=${product.id}">
+            <button>Buy Now</button>
+            </a>
+        </div>
+        `;
+    });
 });
-
-function showProducts(){
-    let html="";
-    products.forEach((p,i)=>{
-        html+=`
-        <div class="product">
-            <img src="${p.image}">
-            <h4>${p.name}</h4>
-            <div class="price">৳${p.price}</div>
-            <button class="cartbtn" onclick="addToCart(${i})">Add to Cart</button>
-        </div>`;
-    });
-    document.getElementById("productGrid").innerHTML=html;
-}
-
-function addToCart(index){
-    let product = products[index];
-    let existing = cart.find(item=>item.name===product.name);
-
-    if(existing){
-        existing.qty +=1;
-    } else{
-        cart.push({
-            name: product.name,
-            price: product.price,
-            qty:1
-        });
-    }
-
-    document.getElementById("cartCount").innerText = cart.length;
-}
-
-function submitOrder(){
-
-    const name = document.getElementById("customerName").value;
-    const phone = document.getElementById("phone").value;
-    const address = document.getElementById("address").value;
-
-    if(!name || !phone || !address){
-        alert("Fill all fields");
-        return;
-    }
-
-    if(cart.length==0){
-        alert("Cart is empty");
-        return;
-    }
-
-    const orderData = {
-        customerName:name,
-        phone:phone,
-        address:address,
-        paymentMethod:"Cash On Delivery",
-        productList:cart
-    };
-
-    fetch(ORDER_URL,{
-        method:"POST",
-        body:JSON.stringify(orderData)
-    })
-    .then(res=>res.text())
-    .then(data=>{
-        alert("Order Placed Successfully!");
-        cart=[];
-        document.getElementById("cartCount").innerText=0;
-    });
-
-}
 
 </script>
 
