--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
 
 <style>
 body{margin:0;font-family:Arial;background:#f5f5f5;}
-.header{background:#0f2a56;color:white;padding:15px;font-size:18px;}
+.header{background:#0f2a56;color:white;padding:15px;}
 .container{padding:15px;}
 .card{background:white;padding:15px;border-radius:10px;
 box-shadow:0 4px 12px rgba(0,0,0,0.1);margin-bottom:15px;}
