--- a/index.html
+++ b/index.html
@@ -6,21 +6,118 @@
 <title>Shahin Tech BD</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#f5f5f5;}
-.header{background:#0f2a56;color:white;padding:15px;
-display:flex;justify-content:space-between;}
-.container{padding:10px;display:grid;
-grid-template-columns:repeat(2,1fr);gap:10px;}
-.card{background:white;border-radius:10px;
-box-shadow:0 4px 12px rgba(0,0,0,0.1);padding:10px;}
-img{width:100%;border-radius:8px;}
-.price{color:#ff6a00;font-weight:bold;font-size:18px;}
-.old{color:gray;text-decoration:line-through;font-size:13px;}
-.badge{background:red;color:white;
-padding:2px 6px;border-radius:5px;font-size:11px;}
-button{width:100%;padding:8px;margin-top:8px;
-border:none;border-radius:6px;
-background:#ff6a00;color:white;font-weight:bold;}
+body{
+margin:0;
+font-family:Arial;
+background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+color:#fff;
+}
+
+.header{
+background:#0d1b2a;
+padding:15px;
+display:flex;
+justify-content:space-between;
+font-weight:bold;
+font-size:18px;
+}
+
+.banner{
+width:100%;
+height:180px;
+overflow:hidden;
+position:relative;
+}
+
+.slide{
+position:absolute;
+width:100%;
+height:100%;
+display:flex;
+align-items:center;
+justify-content:center;
+font-size:22px;
+font-weight:bold;
+transition:opacity 1s;
+padding:20px;
+text-align:center;
+}
+
+.slide1{background:linear-gradient(45deg,#ff6a00,#ee0979);}
+.slide2{background:linear-gradient(45deg,#00c6ff,#0072ff);}
+.slide3{background:linear-gradient(45deg,#11998e,#38ef7d);}
+
+.categories{
+display:flex;
+justify-content:space-around;
+padding:15px;
+background:#14213d;
+}
+
+.categories div{
+background:#1b263b;
+padding:8px 12px;
+border-radius:20px;
+font-size:13px;
+}
+
+.container{
+padding:15px;
+display:grid;
+grid-template-columns:repeat(2,1fr);
+gap:12px;
+}
+
+.card{
+background:#1b263b;
+border-radius:12px;
+padding:10px;
+box-shadow:0 4px 15px rgba(0,0,0,0.4);
+}
+
+.card img{
+width:100%;
+border-radius:8px;
+}
+
+.old{
+color:#aaa;
+text-decoration:line-through;
+font-size:13px;
+}
+
+.price{
+color:#ffb703;
+font-weight:bold;
+font-size:18px;
+}
+
+.badge{
+background:#e63946;
+padding:3px 6px;
+border-radius:5px;
+font-size:11px;
+display:inline-block;
+margin-top:5px;
+}
+
+button{
+width:100%;
+padding:8px;
+margin-top:8px;
+border:none;
+border-radius:6px;
+background:#ff6a00;
+color:white;
+font-weight:bold;
+}
+
+.footer{
+text-align:center;
+padding:20px;
+font-size:12px;
+color:#aaa;
+}
 </style>
 </head>
 
@@ -28,10 +125,27 @@ background:#ff6a00;color:white;font-weight:bold;}
 
 <div class="header">
 <div>Shahin Tech BD</div>
-<div>Cart: 0</div>
+<div>Premium Electronics</div>
+</div>
+
+<div class="banner">
+<div class="slide slide1">🔥 Best Electronics Deals in Jaldhaka</div>
+<div class="slide slide2" style="opacity:0">⚡ Fast Delivery All Over Bangladesh</div>
+<div class="slide slide3" style="opacity:0">💎 Premium Quality Tech Products</div>
+</div>
+
+<div class="categories">
+<div>Accessories</div>
+<div>Gaming</div>
+<div>Power</div>
+<div>Gadgets</div>
 </div>
 
 <div class="container" id="productList"></div>
+
+<div class="footer">
+© 2026 Shahin Tech BD | Trusted Electronics Store
+</div>
 
 <script>
 
@@ -40,22 +154,32 @@ const SHEET_URL = "https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0N
 fetch(SHEET_URL)
 .then(res=>res.json())
 .then(data=>{
-    const container = document.getElementById("productList");
+    const container=document.getElementById("productList");
     data.forEach(product=>{
-        container.innerHTML += `
+        container.innerHTML+=`
         <div class="card">
-            <img src="${product.image}">
-            <h4>${product.name}</h4>
-            <div class="old">৳${product.oldprice}</div>
-            <div class="price">৳${product.price}</div>
-            <div class="badge">${product.discount}% OFF</div>
-            <a href="product.html?id=${product.id}">
-            <button>Buy Now</button>
-            </a>
+        <img src="${product.image}">
+        <h4>${product.name}</h4>
+        <div class="old">৳${product.oldprice}</div>
+        <div class="price">৳${product.price}</div>
+        <div class="badge">${product.discount}% OFF</div>
+        <a href="product.html?id=${product.id}">
+        <button>Buy Now</button>
+        </a>
         </div>
         `;
     });
 });
+
+// Banner Auto Slide
+let slides=document.querySelectorAll(".slide");
+let index=0;
+
+setInterval(()=>{
+slides[index].style.opacity=0;
+index=(index+1)%slides.length;
+slides[index].style.opacity=1;
+},2000);
 
 </script>
 
