--- a/product.html
+++ b/product.html
@@ -6,8 +6,8 @@
 <title>Product Details</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#f5f5f5;}
-.header{background:#0f2a56;color:white;padding:15px;}
+body{margin:0;font-family:Arial;background:#f1f1f1;}
+.header{background:#0d1b2a;color:white;padding:15px;}
 .container{padding:15px;}
 .card{background:white;padding:15px;border-radius:10px;
 box-shadow:0 4px 12px rgba(0,0,0,0.1);margin-bottom:15px;}
@@ -16,10 +16,8 @@ img{width:100%;border-radius:10px;}
 .new{color:#ff6a00;font-size:22px;font-weight:bold;}
 .badge{background:red;color:white;padding:4px 8px;
 border-radius:6px;font-size:12px;display:inline-block;margin-top:5px;}
-button{width:100%;padding:12px;margin-top:10px;
-border:none;border-radius:8px;font-weight:bold;font-size:16px;}
-.buy{background:#ff6a00;color:white;}
 input,select{width:100%;padding:10px;margin-top:8px;border-radius:6px;border:1px solid #ccc;}
+button{width:100%;padding:12px;margin-top:10px;border:none;border-radius:8px;font-weight:bold;font-size:16px;background:#ff6a00;color:white;}
 .summary{background:#fff3e0;padding:10px;border-radius:8px;margin-top:10px;}
 </style>
 </head>
@@ -29,6 +27,7 @@ input,select{width:100%;padding:10px;margin-top:8px;border-radius:6px;border:1px
 <div class="header">Shahin Tech BD</div>
 
 <div class="container">
+
 <div class="card" id="productBox"></div>
 
 <div class="card">
@@ -43,8 +42,9 @@ input,select{width:100%;padding:10px;margin-top:8px;border-radius:6px;border:1px
 </select>
 
 <select id="location" onchange="calculateTotal()">
-<option value="60">Inside Dhaka - ৳60</option>
-<option value="120">Outside Dhaka - ৳120</option>
+<option value="50">Jaldhaka Upazila - ৳50</option>
+<option value="100">Nilphamari District - ৳100</option>
+<option value="150">Outside Nilphamari (Bangladesh) - ৳150</option>
 </select>
 
 <div class="summary">
@@ -57,91 +57,82 @@ Delivery: ৳<span id="deliveryCharge">0</span><br>
 <input id="phone" placeholder="Phone Number">
 <input id="address" placeholder="Address">
 
-<button class="buy" onclick="submitOrder()">Confirm Order</button>
+<button onclick="submitOrder()">Confirm Order</button>
 
 </div>
 </div>
 
 <script>
 
-const SHEET_URL = "https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
-const ORDER_URL = "https://script.google.com/macros/s/AKfycbwmSjQZKHkql6DmE9pNxO4VmqwnCeDSqrru29ENN-RLUFpAUVjhapHgQei63mt7Gz6H/exec";
+const SHEET_URL="https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
+const ORDER_URL="https://script.google.com/macros/s/AKfycbwmSjQZKHkql6DmE9pNxO4VmqwnCeDSqrru29ENN-RLUFpAUVjhapHgQei63mt7Gz6H/exec";
 
 let product;
-let basePrice = 0;
+let basePrice=0;
 
-const params = new URLSearchParams(window.location.search);
-const id = params.get("id");
+const params=new URLSearchParams(window.location.search);
+const id=params.get("id");
 
 fetch(SHEET_URL)
 .then(res=>res.json())
 .then(data=>{
-    product = data.find(p => p.id == id);
-    basePrice = Number(product.price);
-    showProduct();
-    calculateTotal();
+product=data.find(p=>p.id==id);
+basePrice=Number(product.price);
+showProduct();
+calculateTotal();
 });
 
 function showProduct(){
-    document.getElementById("productBox").innerHTML = `
-        <img src="${product.image}">
-        <h2>${product.name}</h2>
-        <div class="old">৳${product.oldprice}</div>
-        <div class="new">৳${product.price}</div>
-        <div class="badge">${product.discount}% OFF</div>
-        <p>${product.description}</p>
-    `;
+document.getElementById("productBox").innerHTML=`
+<img src="${product.image}">
+<h2>${product.name}</h2>
+<div class="old">৳${product.oldprice}</div>
+<div class="new">৳${product.price}</div>
+<div class="badge">${product.discount}% OFF</div>
+<p>${product.description}</p>
+`;
 }
 
 function calculateTotal(){
-
-    const qty = Number(document.getElementById("quantity").value);
-    const delivery = Number(document.getElementById("location").value);
-
-    const productTotal = basePrice * qty;
-    const grandTotal = productTotal + delivery;
-
-    document.getElementById("productTotal").innerText = productTotal;
-    document.getElementById("deliveryCharge").innerText = delivery;
-    document.getElementById("grandTotal").innerText = grandTotal;
+const qty=Number(document.getElementById("quantity").value);
+const delivery=Number(document.getElementById("location").value);
+const productTotal=basePrice*qty;
+const grandTotal=productTotal+delivery;
+document.getElementById("productTotal").innerText=productTotal;
+document.getElementById("deliveryCharge").innerText=delivery;
+document.getElementById("grandTotal").innerText=grandTotal;
 }
 
 function submitOrder(){
 
-    const name = document.getElementById("name").value;
-    const phone = document.getElementById("phone").value;
-    const address = document.getElementById("address").value;
-    const qty = document.getElementById("quantity").value;
-    const locationText = document.getElementById("location").selectedOptions[0].text;
-    const grandTotal = document.getElementById("grandTotal").innerText;
+const name=document.getElementById("name").value;
+const phone=document.getElementById("phone").value;
+const address=document.getElementById("address").value;
+const qty=document.getElementById("quantity").value;
+const locationText=document.getElementById("location").selectedOptions[0].text;
+const total=document.getElementById("grandTotal").innerText;
 
-    if(!name || !phone || !address){
-        alert("Fill all fields");
-        return;
-    }
+if(!name||!phone||!address){
+alert("Fill all fields");
+return;
+}
 
-    const orderData = {
-        customername: name,
-        phone: phone,
-        address: address,
-        paymentmethod: "Cash On Delivery",
-        productlist: product.name + 
-        " | Qty: " + qty + 
-        " | " + locationText + 
-        " | Total: ৳" + grandTotal
-    };
+const orderData={
+customername:name,
+phone:phone,
+address:address,
+paymentmethod:"Cash On Delivery",
+productlist:product.name+" | Qty:"+qty+" | "+locationText+" | Total:৳"+total
+};
 
-    fetch(ORDER_URL,{
-        method:"POST",
-        body: JSON.stringify(orderData)
-    })
-    .then(res=>res.text())
-    .then(data=>{
-        alert("Order Successful!");
-    })
-    .catch(err=>{
-        alert("Order Failed");
-    });
+fetch(ORDER_URL,{
+method:"POST",
+body:JSON.stringify(orderData)
+})
+.then(res=>res.text())
+.then(data=>{
+alert("Order Successful!");
+});
 }
 
 </script>
