--- a/index.html
+++ b/index.html
@@ -6,73 +6,59 @@
 <title>Shahin Tech BD</title>
 
 <style>
-body{
-margin:0;
-font-family:Arial;
-background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-color:#fff;
-}
+body{margin:0;font-family:Arial;background:#f1f1f1;padding-bottom:70px;}
 
 .header{
 background:#0d1b2a;
-padding:15px;
+color:white;
+padding:12px;
+font-weight:bold;
 display:flex;
 justify-content:space-between;
-font-weight:bold;
-font-size:18px;
-}
-
-.banner{
-width:100%;
-height:180px;
-position:relative;
-overflow:hidden;
-}
-
-.slide{
-position:absolute;
-width:100%;
-height:100%;
-display:flex;
 align-items:center;
-justify-content:center;
-font-size:22px;
-font-weight:bold;
-transition:opacity 1s;
-padding:20px;
-text-align:center;
 }
 
-.slide1{background:linear-gradient(45deg,#ff6a00,#ee0979);}
-.slide2{background:linear-gradient(45deg,#00c6ff,#0072ff);}
-.slide3{background:linear-gradient(45deg,#11998e,#38ef7d);}
+.search-box{
+padding:10px;
+background:white;
+}
+
+.search-box input{
+width:100%;
+padding:10px;
+border-radius:8px;
+border:1px solid #ccc;
+}
 
 .categories{
 display:flex;
-justify-content:space-around;
-padding:15px;
-background:#14213d;
+overflow:auto;
+background:#fff;
+padding:10px;
+gap:10px;
 }
 
-.categories div{
-background:#1b263b;
+.categories button{
+background:#0d1b2a;
+color:white;
+border:none;
 padding:8px 12px;
 border-radius:20px;
-font-size:13px;
+white-space:nowrap;
 }
 
 .container{
-padding:15px;
+padding:10px;
 display:grid;
 grid-template-columns:repeat(2,1fr);
-gap:12px;
+gap:10px;
 }
 
 .card{
-background:#1b263b;
-border-radius:12px;
+background:white;
+border-radius:10px;
 padding:10px;
-box-shadow:0 4px 15px rgba(0,0,0,0.4);
+box-shadow:0 3px 10px rgba(0,0,0,0.1);
 }
 
 .card img{
@@ -80,44 +66,39 @@ width:100%;
 border-radius:8px;
 }
 
-.old{
-color:#aaa;
-text-decoration:line-through;
-font-size:13px;
-}
+.old{color:gray;text-decoration:line-through;font-size:13px;}
+.price{color:#ff6a00;font-weight:bold;font-size:16px;}
+.badge{background:red;color:white;font-size:11px;padding:3px 6px;border-radius:5px;display:inline-block;margin-top:4px;}
 
-.price{
-color:#ffb703;
-font-weight:bold;
-font-size:18px;
-}
-
-.badge{
-background:#e63946;
-padding:3px 6px;
-border-radius:5px;
-font-size:11px;
-display:inline-block;
-margin-top:5px;
-}
-
-button{
+button.buy{
 width:100%;
 padding:8px;
 margin-top:8px;
-border:none;
-border-radius:6px;
 background:#ff6a00;
+border:none;
 color:white;
+border-radius:6px;
 font-weight:bold;
 }
 
-.footer{
-text-align:center;
-padding:20px;
-font-size:12px;
-color:#aaa;
+.bottom-nav{
+position:fixed;
+bottom:0;
+left:0;
+right:0;
+background:#0d1b2a;
+display:flex;
+justify-content:space-around;
+padding:8px 0;
 }
+
+.bottom-nav a{
+color:white;
+text-decoration:none;
+font-size:13px;
+text-align:center;
+}
+
 </style>
 </head>
 
@@ -125,60 +106,75 @@ color:#aaa;
 
 <div class="header">
 <div>Shahin Tech BD</div>
-<div>Premium Electronics</div>
+<div>Premium Tech</div>
 </div>
 
-<div class="banner">
-<div class="slide slide1">🔥 Best Electronics Deals in Jaldhaka</div>
-<div class="slide slide2" style="opacity:0">⚡ Fast Delivery All Over Bangladesh</div>
-<div class="slide slide3" style="opacity:0">💎 Premium Quality Tech Products</div>
+<div class="search-box">
+<input type="text" id="searchInput" placeholder="Search product..." onkeyup="filterProducts()">
 </div>
 
 <div class="categories">
-<div>Accessories</div>
-<div>Gaming</div>
-<div>Power</div>
-<div>Gadgets</div>
+<button onclick="filterCategory('all')">All</button>
+<button onclick="filterCategory('Accessories')">Accessories</button>
+<button onclick="filterCategory('Gaming')">Gaming</button>
+<button onclick="filterCategory('Power')">Power</button>
+<button onclick="filterCategory('Gadgets')">Gadgets</button>
 </div>
 
 <div class="container" id="productList"></div>
 
-<div class="footer">
-© 2026 Shahin Tech BD | Trusted Electronics Store
+<div class="bottom-nav">
+<a href="index.html">🏠<br>Home</a>
+<a href="#">📂<br>Category</a>
+<a href="#">🛒<br>Orders</a>
+<a href="account.html">👤<br>Account</a>
 </div>
 
 <script>
 
-const SHEET_URL = "https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
+const SHEET_URL="https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
+let allProducts=[];
 
 fetch(SHEET_URL)
 .then(res=>res.json())
 .then(data=>{
-    const container=document.getElementById("productList");
-    data.forEach(product=>{
-        container.innerHTML+=`
-        <div class="card">
-        <img src="${product.image}">
-        <h4>${product.name}</h4>
-        <div class="old">৳${product.oldprice}</div>
-        <div class="price">৳${product.price}</div>
-        <div class="badge">${product.discount}% OFF</div>
-        <a href="product.html?id=${product.id}">
-        <button>Buy Now</button>
-        </a>
-        </div>
-        `;
-    });
+allProducts=data;
+displayProducts(data);
 });
 
-let slides=document.querySelectorAll(".slide");
-let index=0;
+function displayProducts(data){
+const container=document.getElementById("productList");
+container.innerHTML="";
+data.forEach(product=>{
+container.innerHTML+=`
+<div class="card">
+<img src="${product.image}">
+<h4>${product.name}</h4>
+<div class="old">৳${product.oldprice}</div>
+<div class="price">৳${product.price}</div>
+<div class="badge">${product.discount}% OFF</div>
+<a href="product.html?id=${product.id}">
+<button class="buy">Buy Now</button>
+</a>
+</div>
+`;
+});
+}
 
-setInterval(()=>{
-slides[index].style.opacity=0;
-index=(index+1)%slides.length;
-slides[index].style.opacity=1;
-},2000);
+function filterProducts(){
+const search=document.getElementById("searchInput").value.toLowerCase();
+const filtered=allProducts.filter(p=>p.name.toLowerCase().includes(search));
+displayProducts(filtered);
+}
+
+function filterCategory(cat){
+if(cat=="all"){
+displayProducts(allProducts);
+return;
+}
+const filtered=allProducts.filter(p=>p.category==cat);
+displayProducts(filtered);
+}
 
 </script>
 
